--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node dist/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only nodemon app.ts",
+    "build" : "tsc"
   },
   "keywords": [],
   "author": "",
@@ -27,9 +28,14 @@
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.6.2",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.2.2",
     "nodemon": "^3.1.10",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
   }
 }
