--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "start": "node dist/app.ts",
     "dev": "ts-node-dev --respawn --transpile-only nodemon app.ts",
-    "build" : "tsc"
+    "build": "tsc",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -28,14 +29,19 @@
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
+    "@eslint/js": "^9.37.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.6.2",
     "babel-jest": "^30.2.0",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
     "jest": "^30.2.0",
+    "jiti": "^2.6.1",
     "mongodb-memory-server": "^10.2.2",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   }
 }
