--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.28.3",
     "@eslint/js": "^9.37.0",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.6.2",
     "babel-jest": "^30.2.0",
     "eslint": "^9.37.0",
@@ -40,6 +41,7 @@
     "mongodb-memory-server": "^10.2.2",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0"
