--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "jest",
     "start": "node dist/app.ts",
-    "dev": "ts-node app.ts",
+    "dev": "nodemon",
     "build": "tsc",
     "lint": "eslint ."
   },
