Added rate limiting

--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
@@ -18,13 +18,15 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "cron": "^4.3.3",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "redis": "^5.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
