Fixed the tests to work with redis

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "babel-jest": "^30.2.0",
+    "cross-env": "^10.1.0",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -52,6 +53,7 @@
     "mongodb-memory-server": "^10.2.2",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "redis-memory-server": "^0.13.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
