--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "jest --detectOpenHandles",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
