Added redis to the docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,11 @@ services:
       - ./server/.env
     depends_on:
       - mongo
+      - redis
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URI=mongodb://mongo:27017/mydb
+    restart: unless-stopped
 
   mongo:
     image: mongo
@@ -24,6 +29,17 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    command: ["mongod", "--quiet", "--logpath", "/dev/null"]
+    restart: unless-stopped
+
+  redis:
+    image: redis
+    ports: 
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
 
 volumes:
   mongo_data:
+  redis_data:
