--- a/server/package.json
+++ b/server/package.json
@@ -34,9 +34,11 @@
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.38.0",
     "@jest/globals": "^30.2.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.6.2",
     "@types/supertest": "^6.0.3",
