--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview --host --port 5173",
-    "test": "jest"
+    "test": "jest --config ./jest.config.cjs"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
