--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "ts-jest": "^29.4.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
