--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -41,7 +42,6 @@
     "ts-jest": "^29.4.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
-    "vite-plugin-environment": "^1.1.3"
+    "vite": "^7.1.2"
   }
 }
