--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@testing-library/user-event": "^14.6.1",
     "axios": "^1.12.2",
     "lucide-react": "^0.543.0",
     "motion": "^12.23.24",
