--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "cron": "^4.3.3",
@@ -26,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
+    "pg": "^8.17.1",
     "redis": "^5.9.0"
   },
   "devDependencies": {
@@ -41,6 +44,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.6.2",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
@@ -55,6 +59,7 @@
     "mongodb-memory-server": "^10.2.2",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "prisma": "^7.2.0",
     "redis-memory-server": "^0.13.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
