--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,42 @@
-events {}
+worker_processes auto; 
+
+events {
+  worker_connections 2048; 
+}
 
 http {
   include       mime.types;
   default_type  application/octet-stream;
   sendfile      on;
+  
+  tcp_nopush    on; 
+  tcp_nodelay   on;
+
   client_max_body_size 10M;
+
+  limit_req_zone $binary_remote_addr zone=api_limit:10m rate=20r/s;
 
   upstream backend {
     server backend:5000;
+    keepalive 32; 
   }
 
   server {
     listen 80;
 
+    client_body_timeout 10s;
+    client_header_timeout 10s;
+    keepalive_timeout 15s;
+
     root /usr/share/nginx/html;
     index index.html;
 
     location /api/ {
+      limit_req zone=api_limit burst=50 nodelay;
+      proxy_buffering on;
+      proxy_buffers 16 16k;
+      proxy_buffer_size 16k;
+
       proxy_pass http://backend/api/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
