--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./client/dist:/usr/share/nginx/html       # serve React build
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf 
+      - ./client/dist:/usr/share/nginx/html # serve React build
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - backendLoadBalancing
       - frontendLoadBalancing
@@ -23,29 +23,48 @@ services:
       replicas: 2
     command: npm run build
     volumes:
-      - ./client/dist:/app/dist                   
+      - ./client/dist:/app/dist
     networks:
       - frontendLoadBalancing
       - app-net
     restart: unless-stopped
 
-
   backend:
     build: ./server
     env_file:
       - ./server/.env
-    deploy: 
+    deploy:
       replicas: 4
     depends_on:
-      - mongo
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
     networks:
       - backendLoadBalancing
       - app-net
     environment:
       - PORT=5000
       - REDIS_URL=redis://redis:6379
-      - MONGO_URI=mongodb://mongo:27017/mydb
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/queuekiller
+    command: sh -c "npx prisma migrate deploy && node dist/server.js"
+    restart: unless-stopped
+
+  postgres:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: queuekiller
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    networks:
+      - app-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
 
   mongo:
@@ -61,7 +80,7 @@ services:
 
   redis:
     image: redis
-    ports: 
+    ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
@@ -72,6 +91,7 @@ services:
 volumes:
   mongo_data:
   redis_data:
+  pg_data:
 
 networks:
   backendLoadBalancing:
